tests/baselines/reference/parserMemberAccessorDeclaration17.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration17.ts(2,8): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration17.ts(2,13): error TS1051: A 'set' accessor cannot have an optional parameter.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration17.ts (2 errors) ====
    class C {
       set Foo(a?: number) { }
           ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                ~
!!! error TS1051: A 'set' accessor cannot have an optional parameter.
    }